<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>org.springframework.data.examples</groupId>
	<artifactId>spring-data-examples</artifactId>
	<version>2.0.0.BUILD-SNAPSHOT</version>
	<packaging>pom</packaging>

	<name>Spring Data - Examples</name>

	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>2.5.0-RC1</version>
	</parent>

	<modules>
		<module>bom</module>
		<!-- <module>couchbase</module> -->
		<module>cassandra</module>
		<module>elasticsearch</module>
		<module>jdbc</module>
		<module>jpa</module>
		<module>ldap</module>
		<module>map</module>
		<module>mongodb</module>
		<module>multi-store</module>
		<module>r2dbc</module>
		<module>neo4j</module>
		<module>rest</module>
		<module>redis</module>
		<module>web</module>
	</modules>

	<properties>
		<maven.compiler.source>16</maven.compiler.source>
		<maven.compiler.target>16</maven.compiler.target>
		<byte-buddy.version>1.11.0</byte-buddy.version>
		<testcontainers.version>1.15.3</testcontainers.version>
		<kotlin.version>1.5.0</kotlin.version>
		<apt.version>1.1.3</apt.version>
		<jvm.enable-preview></jvm.enable-preview>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>

	<profiles>
		<profile>
			<id>spring-data-next-releasetrain</id>
			<properties>
				<spring-data-bom.version>2021.1.0-SNAPSHOT</spring-data-bom.version>
			</properties>
		</profile>

		<profile>
			<id>spring-data-next</id>
			<properties>
				<spring-data-bom.version>2021.0.1-SNAPSHOT</spring-data-bom.version>
			</properties>
		</profile>

	</profiles>

	<developers>
		<developer>
			<id>odrotbohm</id>
			<name>Oliver Drotbohm</name>
			<email>odrotbohm@pivotal.io</email>
		</developer>
		<developer>
			<id>tdarimont</id>
			<name>Thomas Darimont</name>
			<email>tdarimont@gopivotal.io</email>
		</developer>
		<developer>
			<id>cstrobl</id>
			<name>Christoph Strobl</name>
			<email>cstrobl@pivotal.io</email>
		</developer>
		<developer>
			<id>gturnquist</id>
			<name>Greg Turnquist</name>
			<email>gturnquist@pivotal.io</email>
		</developer>
		<developer>
			<id>mpaluch</id>
			<name>Mark Paluch</name>
			<email>mpaluch@pivotal.io</email>
		</developer>
		<developer>
			<id>jschauder</id>
			<name>Jens Schauder</name>
			<email>jschauder@pivotal.io</email>
		</developer>
	</developers>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.testcontainers</groupId>
				<artifactId>testcontainers-bom</artifactId>
				<version>${testcontainers.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<dependencies>

		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-devtools</artifactId>
			<scope>provided</scope>
		</dependency>

		<!-- Test dependencies -->

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-engine</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.junit.vintage</groupId>
			<artifactId>junit-vintage-engine</artifactId>
			<scope>test</scope>
		</dependency>

		<!-- Java 9++ dependencies -->

		<dependency>
			<groupId>javax.xml.bind</groupId>
			<artifactId>jaxb-api</artifactId>
		</dependency>
		<dependency>
			<groupId>javax.annotation</groupId>
			<artifactId>javax.annotation-api</artifactId>
		</dependency>

	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<release>16</release>
					<parameters>true</parameters>
				</configuration>
			</plugin>
		</plugins>
	</build>

	<repositories>
		<repository>
			<id>central</id>
			<name>Maven Central</name>
			<url>https://repo1.maven.org/maven2/</url>
		</repository>
		<repository>
			<id>spring-libs-snapshot</id>
			<url>https://repo.spring.io/libs-snapshot</url>
		</repository>
	</repositories>

	<pluginRepositories>
		<pluginRepository>
			<id>central</id>
			<name>Maven Central</name>
			<url>https://repo1.maven.org/maven2/</url>
		</pluginRepository>
		<pluginRepository>
			<id>spring-libs-snapshot</id>
			<url>https://repo.spring.io/libs-snapshot</url>
		</pluginRepository>
	</pluginRepositories>

</project>
